# template-pkg

./: .gitignore  README.md  pyproject.toml  setup.py
src/my_project/: __init__.py
